Fix cocktail-page card illustration alignment

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -427,6 +427,7 @@ footer {
     margin: 5rem 5rem 10rem 55rem; 
     line-height: 160%;
     border-radius: 30px;
+    transform: translate(0, -10px); /* offsetting the transform on the illustration */
 
     box-shadow:
         2.1px 1.7px 3.2px var(--shadow),
@@ -479,6 +480,7 @@ footer {
     border-width: 0;
     height: 100px;
     border-radius: 30px 30px 0 0;
+    transform: translate(0, 10px);
 }
 
 .cocktail-body {
